improvement: auth handler
finished JWT functionality in auth handlers
