# services/auth/cmd/server/docs/swagger.json
@@ -27,9 +27,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "SignIn success",
+                        "description": "SingIn success",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/auth.SignInResp200Body"
                         }
                     },
                     "401": {
@@ -120,6 +120,17 @@
                     "type": "string",
                     "maxLength": 32,
                     "minLength": 12
+                }
+            }
+        },
+        "auth.SignInResp200Body": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
                 }
             }
         },
